--- a/style.css
+++ b/style.css
@@ -3,13 +3,13 @@ body {
   font-size: 13px;
 }
 
-.style-1 {
+.display-1 {
   font-size: 17px;
   font-weight: bold;
   margin: 0;
 }
 
-.style-2 {
+.display-2 {
   font-size: 15px;
   font-weight: normal;
   margin: 1em 0;
@@ -17,4 +17,8 @@ body {
 
 a {
   color: green;
+}
+
+div {
+  width: 100;
 }
